--- a/Cart/index.html
+++ b/Cart/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Your Cart</title>
-  <link href="style.css" rel="stylesheet" />
+  <link href="../style.css" rel="stylesheet" />
   <style>
     body {
       font-family: 'Segoe UI', sans-serif;
