--- a/index.html
+++ b/index.html
@@ -353,7 +353,7 @@ function decreaseCart(name) {
   });
 
   function toggleCart() {
-  window.location.href = "cart.html";
+  window.location.href = "/Sign-Laser/Cart";
 }
 
 </script>
