--- a/Cart/index.html
+++ b/Cart/index.html
@@ -248,7 +248,7 @@
   <header>
     <div class="logo-text">Cart</div>
     <div class="nav-links">
-      <a href="../index.html" class="back-home">Back to Home</a>
+      <a href="/Sign-Laser/" class="back-home">Back to Home</a>
       <a href="/Sign-Laser/Support">Support</a>
     </div>
     <div class="hamburger" onclick="toggleMenu()">
