--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 
   <nav class="hidden md:flex items-center space-x-8 font-semibold text-gray-700">
     <a href="#" onclick="location.reload();" class="hover:text-yellow-500">Home</a>
-    <div id="categories" class="flex justify-center mb-8 fade-in">Categories</a>
+    <a href="#products" class="hover:text-yellow-500">Categories</a>
     <a href="/Sign-Laser/Support" class="hover:text-yellow-500">Support</a>
 	<a href="javascript:void(0);" onclick="toggleCart()" class="relative flex items-center hover:text-yellow-500">
   <span class="mr-1">Cart</span>
@@ -84,7 +84,7 @@
     </button>
     <div id="mobile-menu" class="hidden absolute top-14 right-2 w-56 rounded-xl bg-white shadow-xl text-center py-4 space-y-3 z-50">
       <a href="#" onclick="location.reload();" class="block text-gray-800 font-medium hover:bg-gray-100 py-2 rounded">Home</a>
-      <div id="categories" class="flex justify-center mb-8 fade-in"></a>
+      <a href="#products" class="hover:text-yellow-500">Categories</a>
       <a href="/Sign-Laser/Support" class="block text-gray-800 font-medium hover:bg-gray-100 py-2 rounded">Support</a>
 	  <a href="javascript:void(0);" onclick="toggleCart()" class="relative block text-gray-800 font-medium hover:bg-gray-100 py-2 rounded">
   Cart
