--- a/index.html
+++ b/index.html
@@ -139,32 +139,38 @@
 
 <!-- Footer -->
 <footer class="bg-slate-700 text-white px-8 pt-12 pb-6 mt-12">
-  <div class="flex flex-wrap justify-between items-start space-y-8 md:space-y-0">
-    <div>
-      <h4 class="font-bold text-lg mb-2">Contact Us</h4>
-      <p>Email: signandlaser2021@gmail.com</p>
-      <p>Phone: +91 82812 57256</p>
+  <div class="max-w-screen-xl mx-auto">
+    <div class="flex flex-wrap justify-between items-start space-y-8 md:space-y-0">
+      <div>
+        <h4 class="font-bold text-lg mb-2">Contact Us</h4>
+        <p>Email: signandlaser2021@gmail.com</p>
+        <p>Phone: +91 82812 57256</p>
+      </div>
+
+      <div>
+        <h4 class="font-bold text-lg mb-2">Other Support</h4>
+        <div class="flex space-x-4 mt-2">
+          <!-- WhatsApp -->
+          <a href="https://wa.me/918281257256" target="_blank" aria-label="WhatsApp">
+            <img src="https://cdn-icons-png.flaticon.com/512/15707/15707820.png" alt="WhatsApp" class="h-8 w-8 hover:scale-110 transition-transform" />
+          </a>
+
+          <!-- Instagram -->
+          <a href="https://www.instagram.com/sign_and_laser.__?igsh=dGE0eWFkMml1ZnRy" target="_blank" aria-label="Instagram">
+            <img src="https://cdn-icons-png.flaticon.com/512/15707/15707749.png" alt="Instagram" class="h-8 w-8 hover:scale-110 transition-transform" />
+          </a>
+
+          <!-- Facebook -->
+          <a href="https://www.facebook.com/singandlaser" target="_blank" aria-label="Facebook">
+            <img src="https://cdn-icons-png.flaticon.com/512/5968/5968764.png" alt="Facebook" class="h-8 w-8 hover:scale-110 transition-transform" />
+          </a>
+        </div>
+      </div>
     </div>
-    <div>
-      <h4 class="font-bold text-lg mb-2">Other Support</h4>
-      <div class="flex space-x-4 mt-2">
-  <!-- WhatsApp (new) -->
-  <a href="https://wa.me/918281257256" target="_blank" aria-label="WhatsApp">
-    <img src="https://cdn-icons-png.flaticon.com/512/15707/15707820.png" alt="WhatsApp" class="h-8 w-8 hover:scale-110 transition-transform" />
-  </a>
 
-  <!-- Instagram -->
-  <a href="https://www.instagram.com/sign_and_laser.__?igsh=dGE0eWFkMml1ZnRy" target="_blank" aria-label="Instagram">
-    <img src="https://cdn-icons-png.flaticon.com/512/15707/15707749.png" alt="Instagram" class="h-8 w-8 hover:scale-110 transition-transform" />
-  </a>
+    <hr class="border-t border-gray-500 my-6">
 
-  <!-- Facebook -->
-  <a href="https://www.facebook.com/singandlaser" target="_blank" aria-label="Facebook">
-    <img src="https://cdn-icons-png.flaticon.com/512/5968/5968764.png" alt="Facebook" class="h-8 w-8 hover:scale-110 transition-transform" />
-  </a>
-</div>
-
-    </div>
+    <p class="text-sm text-center">&copy; 2025 Sign and Laser. All rights reserved.</p>
   </div>
 </footer>
 
